[package]
name = "ssh_cfg"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Parses `~/.ssh/config` asynchronously."
repository = "https://github.com/azriel91/ssh_cfg"
documentation = "https://docs.rs/ssh_cfg/"
readme = "README.md"
keywords = ["ssh", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
async-fs = "1.5.0"
dirs = "3.0.1"
indexmap = "1.6.2"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["rt"] }
